<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Zoo Mania</string>
    <string name="description">Zoo Snag is a rapid Zoo matching quiz in which you have to match the maximum possible animals before the timer runs down to zero.</string>
    <string name="settings">Settings</string>
    <string name="version">3.2</string>
    <string name="help">Help</string>
    <string name="help_text">Help menu for this game.</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="about_text">Legal details about this game.</string>
    <string name="achievements">Achievements</string>
    <string name="achievements_text">Checkout your achievements.</string>
    <string name="blank"/>
    <string name="flag_table_col_name">Name</string>
    <string name="help_file_name">help.html</string>
    <string name="about_file_name">about.html</string>
    <string name="space">\u0020</string>
    <string name="score">0</string>
    <string name="score_text">Score:</string>
    <string name="times_up">Game Over.  Disable timer to learn.</string>
    <string name="new_game">New Game</string>
    <string name="resume">Resume</string>
    <string name="facebook_post">\u0020Post your score</string>
    <string name="no_facebook">Facebook is not reachable. Please try again later.</string>
    <string name="facebook_success">Posted to Facebook successfully.</string>
    <string name="app_id">264279107046585</string>
    <string name="start">Start</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="mammals">Mammals</string>
    <string name="birds">Birds</string>
    <string name="insects">Insects</string>
    <string name="flags">Animal Category</string>
    <string name="flags_summary">This preference allows you to set the category for the animals</string>
    <string-array name="category_list">
        <item>@string/birds</item>
        <item>@string/mammals</item>
    </string-array>
    <string-array name="category_code">
        <item>birds</item>
        <item>mammals</item>
    </string-array>
    <string name="english">English</string>
    <string name="japanese">日本語</string>
    <string name="russian">русский</string>
    <string name="korean">한국인</string>
    <string name="language">Language</string>
    <string name="language_summary">This preference allows you to set the game language</string>
    <string-array name="language_list">
        <item>@string/english</item>
        <item>@string/japanese</item>
        <item>@string/russian</item>
        <item>@string/korean</item>
    </string-array>
    <string-array name="language_code">
        <item>en</item>
        <item>ja</item>
        <item>ru</item>
        <item>ko</item>
    </string-array>
    <string name="enable_timer">Enable Timer</string>
    <string name="enable_timer_summary">This preference allows you to enable/disable the timer. Achievements will not be available</string>
    <string name="game_complete">Well Done, you have identified all of them.  Enable timer for achievements.</string>
</resources>
