<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:background="#3D4856">
<PreferenceCategory
        android:title="@string/settings"
        android:background="#3D4856">
    <ListPreference
            android:id="@+id/flags_category"
            android:title="@string/flags"
            android:summary="@string/flags_summary"
            android:key="category"
            android:defaultValue="birds"
            android:entries="@array/category_list"
            android:entryValues="@array/category_code"/>
    <CheckBoxPreference
            android:id="@+id/enable_timer"
            android:title="@string/enable_timer"
            android:summary="@string/enable_timer_summary"
            android:key="enable_timer"
            android:defaultValue="true"/>
</PreferenceCategory>
</PreferenceScreen>