<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1.0" 
    android:background="#151A12"
    tools:context=".MainActivity" >
    <LinearLayout 
        android:id="@+id/flag_ll0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/score_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="start"
	        android:textSize="30sp"
	        android:textStyle="bold"
	        android:textColor="#EEEAEA"
	        android:text="@string/score_text" />
	    <TextView
	        android:id="@+id/score"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_gravity="start"
	        android:textSize="30sp"
	        android:textStyle="bold"
	        android:textColor="#EEEAEA"
	        android:text="@string/score" />
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:orientation="horizontal" >
		    <ImageView 
				android:id="@+id/help"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:contentDescription="@string/favorites"
		        android:src="@drawable/favorites" />
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/space"/>
		    <ImageView 
				android:id="@+id/settings"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:contentDescription="@string/settings"
		        android:src="@drawable/settings" />
	    </LinearLayout>
	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_gravity="end"
	        android:textSize="30sp"
	        android:textStyle="bold"
	        android:textColor="#EEEAEA"
	        android:text="@string/blank" />
	    <TextView
	        android:id="@+id/timer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="end"
	        android:textSize="30sp"
	        android:textStyle="bold"
	        android:textColor="#EEEAEA"
	        android:text="@string/blank" />
    </LinearLayout>
    <View
		android:layout_width="match_parent"
	    android:layout_height="2dp"
	    android:background="#EEEAEA" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.32"
        android:orientation="horizontal"
        android:weightSum="1.0" >
        <ImageView 
            android:id="@+id/flag0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blank"
            android:layout_gravity="center"
            android:layout_weight="0.5"/>
        <View
	        android:layout_width="2dp"
	        android:layout_height="fill_parent"
	        android:background="#EEEAEA" />
        <ImageView 
            android:id="@+id/flag1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blank"
            android:layout_gravity="center"
            android:layout_weight="0.5"/>
    </LinearLayout>
    <View
		android:layout_width="match_parent"
	    android:layout_height="2dp"
	    android:background="#EEEAEA" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.32"
        android:orientation="horizontal"
        android:weightSum="1.0" >
        <ImageView 
            android:id="@+id/flag2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blank"
            android:layout_gravity="center"
            android:layout_weight="0.5"/>
        <View
	        android:layout_width="2dp"
	        android:layout_height="match_parent"
	        android:background="#EEEAEA" />
        <ImageView 
            android:id="@+id/flag3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blank"
            android:layout_gravity="center"
            android:layout_weight="0.5"/>
    </LinearLayout>
    <View
		android:layout_width="match_parent"
	    android:layout_height="2dp"
	    android:background="#EEEAEA" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.36"
        android:orientation="vertical"
        android:paddingTop="5dp">
        <TextView 
            android:id="@+id/option0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#EEEAEA"
        	android:text="@string/blank"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:textStyle="bold"
        	android:paddingTop="10dp" />
        <TextView 
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#EEEAEA"
        	android:text="@string/blank"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:textStyle="bold"
        	android:paddingTop="10dp" />
        <TextView 
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#EEEAEA"
        	android:text="@string/blank"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:textStyle="bold"
        	android:paddingTop="10dp" />
        <TextView 
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#EEEAEA"
        	android:text="@string/blank"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:textStyle="bold"
        	android:paddingTop="10dp" />
    </LinearLayout>
    <LinearLayout 
	    android:id="@+id/ad_ll"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	</LinearLayout>
</LinearLayout>